# Clock

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  ClockImage.cpp  ClockImage.h  ColorChooseWidget.cpp  ColorChooseWidget.h  ColorChooseWidget.ui  MainWindow.cpp  MainWindow.h  README.md  Time.cpp  Time.cppm  Time.h  color_choose_widget.ui  main.cpp
